Fixed coloring not stopping